# crypto_prices_rt

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: README.md  test.yml
benchmarks/benchmark_utils/: benchmark.py
data_exploration/: README.md  binance_stream.py  kucoin_stream.py
database/: env.py  tables.py
integration_test/services/extractors/: test_binance_extractor.py
integration_test/src/services/extractors/: test_binance_extractor.py  test_kucoin_extractor.py
src/: .gitignore  README.md  extractor_process.py  transform_process.py
src/common/: generic_extractor.py
src/config/: config.toml
src/extractors/: binance_extractor.py  kucoin_extractor.py
src/kafka/: consumers.py  producers.py
src/models/: binance_model.py  kucoin_model.py  s3_batch_item.py
src/services/batcher/: batcher_service.py  generic_batcher.py
src/services/extractors/: binance_extractor.py  kucoin_extractor.py
src/services/loaders/: s3_explorer.py  s3_explorer_thread.py  s3_uploader.py  s3_uploader_thread.py
src/services/loaders/s3/: s3_explorer.py  s3_explorer_thread.py  s3_uploader_async_thread.py
src/services/transformers/: spark_transformer.py
src/utils/: datatime_converter.py  extract_event_datetime.py  generic_logger.py  s3_key_builder.py
tests/integration_test/services/extractors/: test_binance_extractor.py  test_kucoin_extractor.py
unit_test/services/loaders/: test_s3_uploader.py
