[tool.poetry]
name = "crypto-prices-rt"
version = "0.1.0"
description = ""
authors = ["Elson Chan <elsonccjgmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11.14"
requests = "^2.32.3"
asyncio = "^3.4.3"
mypy = "^1.15.0"
black = "^25.1.0"
ruff = "^0.11.2"
pyspark = "^3.5.5"
alembic = "^1.15.1"
sqlalchemy = "^2.0.39"
pydantic = "^2.10.6"
psycopg2-binary = "^2.9.10"
mypy-boto3-s3 = "^1.37.0"
boto3 = "^1.37.18"
s3pathlib = "^2.3.2"
pandas = "^2.2.3"
stubs = "^1.0.0"
tenacity = "^9.0.0"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
freezegun = "^1.5.1"
logger = "^1.4"
confluent-kafka = "^2.8.2"
retry = "^0.9.2"
aiofiles = "^24.1.0"
aiocsv = "^1.3.2"
datetime = "^5.5"
toml = "^0.10.2"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
exclude = '^(\\.venv|venv|env|\\.g it|node_modules)/'

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
